Lista de AdoptView

--- a/Pet App/Pet_App/View/AdoptView.xaml
+++ b/Pet App/Pet_App/View/AdoptView.xaml
@@ -4,11 +4,16 @@
              x:Class="Pet_App.View.AdoptView">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Adopt Page"/>
-            <ListView>
+            <ListView ItemsSource="{Binding AnimalView}" HasUnevenRows="True">
                 <ListView.ItemTemplate>
                     <DataTemplate>
-                        <TextCell Text="{Binding Name}"/>
+                        <ViewCell>
+                            <StackLayout>
+                                <Label Text="{Binding Name}"/>
+                                <Label Text="{Binding Age}"/>
+                                <Label Text="{Binding Location.City}"/>
+                            </StackLayout>
+                        </ViewCell>
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
