--- a/Pet App/Pet_App/View/MainViewDetail.xaml
+++ b/Pet App/Pet_App/View/MainViewDetail.xaml
@@ -2,7 +2,9 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Pet_App.View.MainViewDetail"
-             Title="Detail">
+             Title="Main"
+             NavigationPage.HasNavigationBar="False" 
+             NavigationPage.HasBackButton="False">
   <StackLayout Padding="10">
     <Label Text="This is a detail page. To get the 'triple' line icon on each platform add a icon to each platform and update the 'Master' page with an Icon that references it."/>
   </StackLayout>
